Moving Dataset to the folder of Homework

--- a/Homework/DM2023-Lab2-Homework.ipynb
+++ b/Homework/DM2023-Lab2-Homework.ipynb
@@ -5,15 +5,15 @@
    "metadata": {},
    "source": [
     "### Student Information\n",
-    "Name:\n",
+    "Name : 鄭兆瑋\n",
     "\n",
-    "Student ID:\n",
+    "Student ID : 108033214\n",
     "\n",
-    "GitHub ID:\n",
+    "GitHub ID : DITShark\n",
     "\n",
-    "Kaggle name:\n",
+    "Kaggle name : \n",
     "\n",
-    "Kaggle private scoreboard snapshot:\n",
+    "Kaggle private scoreboard snapshot : \n",
     "\n",
     "[Snapshot](img/pic0.png)"
    ]
@@ -65,6 +65,466 @@
    "source": [
     "### Begin Assignment Here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### training data\n",
+    "anger_train = pd.read_csv(\"data/semeval/train/anger-ratings-0to1.train.txt\",\n",
+    "                         sep=\"\\t\", header=None,names=[\"id\", \"text\", \"emotion\", \"intensity\"])\n",
+    "sadness_train = pd.read_csv(\"data/semeval/train/sadness-ratings-0to1.train.txt\",\n",
+    "                         sep=\"\\t\", header=None, names=[\"id\", \"text\", \"emotion\", \"intensity\"])\n",
+    "fear_train = pd.read_csv(\"data/semeval/train/fear-ratings-0to1.train.txt\",\n",
+    "                         sep=\"\\t\", header=None, names=[\"id\", \"text\", \"emotion\", \"intensity\"])\n",
+    "joy_train = pd.read_csv(\"data/semeval/train/joy-ratings-0to1.train.txt\",\n",
+    "                         sep=\"\\t\", header=None, names=[\"id\", \"text\", \"emotion\", \"intensity\"])\n",
+    "\n",
+    "# combine 4 sub-dataset\n",
+    "train_df = pd.concat([anger_train, fear_train, joy_train, sadness_train], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### testing data\n",
+    "anger_test = pd.read_csv(\"data/semeval/dev/anger-ratings-0to1.dev.gold.txt\",\n",
+    "                         sep=\"\\t\", header=None, names=[\"id\", \"text\", \"emotion\", \"intensity\"])\n",
+    "sadness_test = pd.read_csv(\"data/semeval/dev/sadness-ratings-0to1.dev.gold.txt\",\n",
+    "                         sep=\"\\t\", header=None, names=[\"id\", \"text\", \"emotion\", \"intensity\"])\n",
+    "fear_test = pd.read_csv(\"data/semeval/dev/fear-ratings-0to1.dev.gold.txt\",\n",
+    "                         sep=\"\\t\", header=None, names=[\"id\", \"text\", \"emotion\", \"intensity\"])\n",
+    "joy_test = pd.read_csv(\"data/semeval/dev/joy-ratings-0to1.dev.gold.txt\",\n",
+    "                         sep=\"\\t\", header=None, names=[\"id\", \"text\", \"emotion\", \"intensity\"])\n",
+    "\n",
+    "# combine 4 sub-dataset\n",
+    "test_df = pd.concat([anger_test, fear_test, joy_test, sadness_test], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>emotion</th>\n",
+       "      <th>intensity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10000</td>\n",
+       "      <td>How the fu*k! Who the heck! moved my fridge!.....</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>0.938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10001</td>\n",
+       "      <td>So my Indian Uber driver just called someone t...</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>0.896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>@DPD_UK I asked for my parcel to be delivered ...</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>0.896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10003</td>\n",
+       "      <td>so ef whichever butt wipe pulled the fire alar...</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>0.896</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10004</td>\n",
+       "      <td>Don't join @BTCare they put the phone down on ...</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>0.896</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id                                               text emotion  intensity\n",
+       "0  10000  How the fu*k! Who the heck! moved my fridge!.....   anger      0.938\n",
+       "1  10001  So my Indian Uber driver just called someone t...   anger      0.896\n",
+       "2  10002  @DPD_UK I asked for my parcel to be delivered ...   anger      0.896\n",
+       "3  10003  so ef whichever butt wipe pulled the fire alar...   anger      0.896\n",
+       "4  10004  Don't join @BTCare they put the phone down on ...   anger      0.896"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>emotion</th>\n",
+       "      <th>intensity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10857</td>\n",
+       "      <td>@ZubairSabirPTI  pls dont insult the word 'Molna'</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>0.479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10858</td>\n",
+       "      <td>@ArcticFantasy I would have almost took offens...</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>0.458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10859</td>\n",
+       "      <td>@IllinoisLoyalty that Rutgers game was an abom...</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>0.562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10860</td>\n",
+       "      <td>@CozanGaming that's what lisa asked before she...</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>0.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10861</td>\n",
+       "      <td>Sometimes I get mad over something so minuscul...</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>0.708</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id                                               text emotion  intensity\n",
+       "0  10857  @ZubairSabirPTI  pls dont insult the word 'Molna'   anger      0.479\n",
+       "1  10858  @ArcticFantasy I would have almost took offens...   anger      0.458\n",
+       "2  10859  @IllinoisLoyalty that Rutgers game was an abom...   anger      0.562\n",
+       "3  10860  @CozanGaming that's what lisa asked before she...   anger      0.500\n",
+       "4  10861  Sometimes I get mad over something so minuscul...   anger      0.708"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# shuffle dataset\n",
+    "train_df = train_df.sample(frac=1)\n",
+    "test_df = test_df.sample(frac=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>emotion</th>\n",
+       "      <th>intensity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2964</th>\n",
+       "      <td>40137</td>\n",
+       "      <td>@WilsonsWorld I was in high school and remembe...</td>\n",
+       "      <td>sadness</td>\n",
+       "      <td>0.688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1049</th>\n",
+       "      <td>20192</td>\n",
+       "      <td>Swear to God don't get a smart meter from your...</td>\n",
+       "      <td>fear</td>\n",
+       "      <td>0.688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>10138</td>\n",
+       "      <td>..... wakes up and says 'have you tried changi...</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>0.667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3349</th>\n",
+       "      <td>40522</td>\n",
+       "      <td>@JoaquinPutoAmo vas a ir al de the amaity affl...</td>\n",
+       "      <td>sadness</td>\n",
+       "      <td>0.396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2526</th>\n",
+       "      <td>30522</td>\n",
+       "      <td>Day 3 of #harvest16 - listening to the sound o...</td>\n",
+       "      <td>joy</td>\n",
+       "      <td>0.417</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id                                               text  emotion  \\\n",
+       "2964  40137  @WilsonsWorld I was in high school and remembe...  sadness   \n",
+       "1049  20192  Swear to God don't get a smart meter from your...     fear   \n",
+       "138   10138  ..... wakes up and says 'have you tried changi...    anger   \n",
+       "3349  40522  @JoaquinPutoAmo vas a ir al de the amaity affl...  sadness   \n",
+       "2526  30522  Day 3 of #harvest16 - listening to the sound o...      joy   \n",
+       "\n",
+       "      intensity  \n",
+       "2964      0.688  \n",
+       "1049      0.688  \n",
+       "138       0.667  \n",
+       "3349      0.396  \n",
+       "2526      0.417  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>emotion</th>\n",
+       "      <th>intensity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>323</th>\n",
+       "      <td>40836</td>\n",
+       "      <td>im thoroughly in love w zen and jumin and i do...</td>\n",
+       "      <td>sadness</td>\n",
+       "      <td>0.458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>21150</td>\n",
+       "      <td>@1johndes ball watching &amp;amp; Rojo'd header wa...</td>\n",
+       "      <td>fear</td>\n",
+       "      <td>0.475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>201</th>\n",
+       "      <td>30830</td>\n",
+       "      <td>If any trump supporters and Hillary haters wan...</td>\n",
+       "      <td>joy</td>\n",
+       "      <td>0.100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>105</th>\n",
+       "      <td>21168</td>\n",
+       "      <td>@joey_coops yes Hun! Avoid at all costs!!</td>\n",
+       "      <td>fear</td>\n",
+       "      <td>0.389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>10940</td>\n",
+       "      <td>Lol little things like that make me so angry x</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>0.604</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id                                               text  emotion  \\\n",
+       "323  40836  im thoroughly in love w zen and jumin and i do...  sadness   \n",
+       "87   21150  @1johndes ball watching &amp; Rojo'd header wa...     fear   \n",
+       "201  30830  If any trump supporters and Hillary haters wan...      joy   \n",
+       "105  21168         @joey_coops yes Hun! Avoid at all costs!!      fear   \n",
+       "83   10940     Lol little things like that make me so angry x    anger   \n",
+       "\n",
+       "     intensity  \n",
+       "323      0.458  \n",
+       "87       0.475  \n",
+       "201      0.100  \n",
+       "105      0.389  \n",
+       "83       0.604  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of Training df:  (3613, 4)\n",
+      "Shape of Testing df:  (347, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Shape of Training df: \", train_df.shape)\n",
+    "print(\"Shape of Testing df: \", test_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -83,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.5"
   },
   "varInspector": {
    "cols": {
