--- a/Homework/DM2023-Lab2-Homework.ipynb
+++ b/Homework/DM2023-Lab2-Homework.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "GitHub ID : DITShark\n",
     "\n",
-    "Kaggle name : \n",
+    "Kaggle name : WinnieShark\n",
     "\n",
     "Kaggle private scoreboard snapshot : \n",
     "\n",
@@ -55,6 +55,13 @@
     "Upload your files to your repository then submit the link to it on the corresponding e-learn assignment.\n",
     "\n",
     "Make sure to commit and save your changes to your repository __BEFORE the deadline (Dec. 31th 11:59 pm, Sunday)__. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1.1 Load Data"
    ]
   },
   {
@@ -517,6 +524,13 @@
    "source": [
     "print(\"Shape of Training df: \", train_df.shape)\n",
     "print(\"Shape of Testing df: \", test_df.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1"
    ]
   },
   {
